Add shortcut to show about dialog
Press 'H' to get to the helpful about dialog.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@
                             >
                         </div>
                     </div>
-                    <div class="nav-item">
+                    <div
+                        class="nav-item"
+                        data-i18n="[title]about.tooltip"
+                        title="Show more information about BRouter-Web"
+                    >
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#about"
                             ><span class="fa fa-lg fa-info-circle" aria-hidden="true"></span
                             ><span data-i18n="navbar.about">About</span></a
