Add shortcut to toggle elevation chart
Press 'E' to show/hide the elevation chart.

--- a/index.html
+++ b/index.html
@@ -910,6 +910,8 @@
                     id="elevation-btn"
                     aria-expanded="false"
                     aria-label="Toggle elevation chart"
+                    data-i18n="[title]footer.elevation-chart"
+                    title="Toggle elevation chart"
                 >
                     <span class="fa fa-area-chart"></span>
                 </button>
