Improve mobile stats (#302)
- flex-wrap instead of hard character break
- minimal margin
- add missing breakpoint for space

--- a/index.html
+++ b/index.html
@@ -846,7 +846,8 @@
                             >
                         </div>
                         <p class="stats-label">
-                            <span id="ascend">-</span>&#8239;<abbr
+                            <span id="ascend">-</span><span class="d-none d-md-inline">&#8239;</span
+                            ><abbr
                                 class="d-none d-md-inline"
                                 data-i18n="[title]footer.meter;footer.meter-abbrev"
                                 title="meters"
