Add contact language hint to about dialog

--- a/index.html
+++ b/index.html
@@ -249,7 +249,11 @@
                             information see
                             <a href="https://brouter.de/" target="_blank">brouter.de</a>.
                         </p>
-                        <p><i data-i18n="about.contact">Contact:</i><br /></p>
+                        <p><i data-i18n="about.contact">Contact:</i></p>
+
+                        <div id="about-contact-language" data-i18n="about.contact-language">
+                            Preferred language is English, as we have both international contributors and users.
+                        </div>
 
                         <ul>
                             <li>
