Don't update TrackAnalysis when tab is hidden
- add missing show/hide methods called by sidebar and maintain active state
- rename inconsistent tab id

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
                     </li>
                     <li>
                         <a
-                            href="#tab_statistics"
+                            href="#tab_analysis"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
                             data-i18n-options='{
@@ -995,7 +995,7 @@
                             <div id="itinerary" class="flexcolumn flexgrow"></div>
                         </div>
 
-                        <div class="leaflet-sidebar-pane" id="tab_statistics">
+                        <div class="leaflet-sidebar-pane" id="tab_analysis">
                             <h1 class="leaflet-sidebar-header">
                                 <span data-i18n="sidebar.analysis.title">Analysis</span>
                                 <span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span>
