allow to add custom overpass queries

--- a/index.html
+++ b/index.html
@@ -240,6 +240,14 @@
                         </button>
                         <button
                             type="button"
+                            id="custom_layers_add_overpass"
+                            class="btn btn-success"
+                            data-i18n="layers.add-overpass"
+                        >
+                            Add overpass query
+                        </button>
+                        <button
+                            type="button"
                             id="custom_layers_remove"
                             class="btn btn-danger"
                             data-i18n="layers.remove-selection"
