Usability fix: Allow Return Key in export dialog

--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                                     Close
                                 </button>
                                 <button
-                                    type="button"
+                                    type="submit"
                                     class="btn btn-primary"
                                     data-i18n="export.title"
                                     id="submitExport"
