Add 20km allowed zone icon

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
                                     Source
                                 </legend>
                                 <p>
+                                    <input type="text" id="nogoJSON" hidden />
                                     <label for="nogoURL" data-i18n="loadNogos.url">URL: </label>
                                     <input type="text" name="nogoURL" id="nogoURL" /><br />
                                     or<br />
