Update prettier version

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div class="form-group">
                             <select class="selectpicker show-tick" data-width="250px" id="profile-alternative" multiple>
                                 <optgroup label="Profile" data-max-options="1" data-icon="fa-bicycle" id="profile">
-                                    <option data-i18n="navbar.profile.custom">Custom </option>
+                                    <option data-i18n="navbar.profile.custom">Custom</option>
                                 </optgroup>
                                 <optgroup
                                     label="Alternative"
@@ -41,12 +41,10 @@
                                     data-icon="fa-random"
                                     id="alternative"
                                 >
-                                    <option data-i18n="navbar.alternative.original" value="0" selected
-                                        >Original
-                                    </option>
-                                    <option data-i18n="navbar.alternative.first" value="1">1st alternative </option>
-                                    <option data-i18n="navbar.alternative.second" value="2">2nd alternative </option>
-                                    <option data-i18n="navbar.alternative.third" value="3">3rd alternative </option>
+                                    <option data-i18n="navbar.alternative.original" value="0" selected>Original</option>
+                                    <option data-i18n="navbar.alternative.first" value="1">1st alternative</option>
+                                    <option data-i18n="navbar.alternative.second" value="2">2nd alternative</option>
+                                    <option data-i18n="navbar.alternative.third" value="3">3rd alternative</option>
                                 </optgroup>
                             </select>
                         </div>
@@ -194,9 +192,7 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="layers.customize">
-                            Customize layers
-                        </h4>
+                        <h4 class="modal-title" data-i18n="layers.customize">Customize layers</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -263,9 +259,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="about.title">
-                            About
-                        </h4>
+                        <h4 class="modal-title" data-i18n="about.title">About</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -358,20 +352,16 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="loadNogos.title">
-                            Load no-go areas
-                        </h4>
+                        <h4 class="modal-title" data-i18n="loadNogos.title">Load no-go areas</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="modal-body">
-                        <p id="nogoError" class="invalid-feedback" style="display: none;"></p>
+                        <p id="nogoError" class="invalid-feedback" style="display: none"></p>
                         <form>
                             <fieldset>
-                                <legend data-i18n="loadNogos.source">
-                                    Source
-                                </legend>
+                                <legend data-i18n="loadNogos.source">Source</legend>
                                 <p>
                                     <input type="text" id="nogoJSON" hidden />
                                     <label for="nogoURL" data-i18n="loadNogos.url">URL: </label>
@@ -382,9 +372,7 @@
                                 </p>
                             </fieldset>
                             <fieldset>
-                                <legend data-i18n="loadNogos.defaultProperties">
-                                    Default properties
-                                </legend>
+                                <legend data-i18n="loadNogos.defaultProperties">Default properties</legend>
                                 <p>
                                     <label for="nogoWeight" data-i18n="loadNogos.nogoWeight"
                                         >No-go weight (-1 means impassable):
@@ -441,9 +429,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="export.title">
-                            Export route
-                        </h4>
+                        <h4 class="modal-title" data-i18n="export.title">Export route</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
@@ -459,9 +445,7 @@
                             </div>
                             <fieldset id="export-format" class="form-group">
                                 <div class="row">
-                                    <legend class="col-form-label col-sm-2" data-i18n="export.format">
-                                        Format
-                                    </legend>
+                                    <legend class="col-form-label col-sm-2" data-i18n="export.format">Format</legend>
                                     <div class="col-sm-10">
                                         <div class="form-check">
                                             <label class="form-check-label">
@@ -517,9 +501,7 @@
                             </fieldset>
                             <fieldset id="export-includes" class="form-group">
                                 <div class="row">
-                                    <legend class="col-form-label col-sm-2" data-i18n="export.include">
-                                        Include
-                                    </legend>
+                                    <legend class="col-form-label col-sm-2" data-i18n="export.include">Include</legend>
                                     <div class="col-sm-10">
                                         <div class="form-check">
                                             <label class="form-check-label">
@@ -571,9 +553,7 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="trackasroute.title">
-                            Load Track as Route
-                        </h4>
+                        <h4 class="modal-title" data-i18n="trackasroute.title">Load Track as Route</h4>
 
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
@@ -581,11 +561,11 @@
                     </div>
                     <div class="modal-body">
                         <form name="loadedittrackForm" id="loadedittrackForm">
-                            <div class="form-group row mt-4 ">
+                            <div class="form-group row mt-4">
                                 <label class="col-sm-3" for="loadedittrackFile" data-i18n="trackasroute.file"
                                     >Trackfile</label
                                 >
-                                <div class="custom-control  custom-file col-sm-8">
+                                <div class="custom-control custom-file col-sm-8">
                                     <input
                                         type="file"
                                         accept=".gpx,.kml,.geojson,*.*"
@@ -596,14 +576,14 @@
                                     <label
                                         for="loadedittrackFile"
                                         class="custom-file-label"
-                                        style="white-space: nowrap; overflow: hidden;  text-overflow: ellipsis;"
+                                        style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis"
                                     >
                                     </label
                                     ><br />
                                 </div>
                             </div>
 
-                            <div class="form-group row mt-4 ">
+                            <div class="form-group row mt-4">
                                 <label class="col-sm-3" for="cb_showtracklayer" data-i18n="trackasroute.tracklayer"
                                     >Track Layer</label
                                 >
@@ -623,7 +603,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row mt-4 ">
+                            <div class="form-group row mt-4">
                                 <label class="col-sm-3" for="cb_showpois" data-i18n="trackasroute.showpois"
                                     >POI's</label
                                 >
@@ -643,7 +623,7 @@
                                 </div>
                             </div>
 
-                            <div class="accordion " id="manual_accordion">
+                            <div class="accordion" id="manual_accordion">
                                 <div class="row">
                                     <button
                                         class="btn btn-link"
@@ -660,7 +640,7 @@
                                     </button>
                                 </div>
                                 <div id="manual_collapse" class="collapse" data-toggle="false">
-                                    <div class="form-group  row">
+                                    <div class="form-group row">
                                         <label
                                             for="simplify_tolerance"
                                             class="col-sm-3"
@@ -669,7 +649,7 @@
                                         >
                                         <input
                                             type="range"
-                                            class="custom-range  col-sm-8"
+                                            class="custom-range col-sm-8"
                                             id="simplify_tolerance"
                                             min="-500"
                                             max="500"
@@ -1020,9 +1000,7 @@
             <div id="stats-container" class="flexrow flexgrow">
                 <ul id="stats">
                     <li>
-                        <div class="text-muted small d-none d-md-block" data-i18n="footer.distance">
-                            Distance
-                        </div>
+                        <div class="text-muted small d-none d-md-block" data-i18n="footer.distance">Distance</div>
                         <p class="stats-label">
                             <span id="distance">-</span>&#8239;<abbr
                                 data-i18n="[title]footer.kilometer;footer.kilometer-abbrev"
@@ -1032,9 +1010,7 @@
                         </p>
                     </li>
                     <li>
-                        <div class="text-muted small d-none d-md-block" data-i18n="footer.travel-time">
-                            Travel time
-                        </div>
+                        <div class="text-muted small d-none d-md-block" data-i18n="footer.travel-time">Travel time</div>
                         <p class="stats-label">
                             <span id="totaltime">-</span>&#8239;<abbr
                                 data-i18n="[title]footer.hours;footer.hours-abbrev"
