Add Babel and core-js & regenerator polyfills

--- a/index.html
+++ b/index.html
@@ -1106,6 +1106,8 @@
             );
         </script>
 
+        <script src="dist/core-js-bundle.min.js"></script>
+        <script src="dist/regenerator-runtime.js"></script>
         <!-- <script src="dist/url-search-params.js"></script> -->
         <script src="config.js"></script>
         <script src="keys.js"></script>
