add translations to `en` locale

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
             <div class="modal-dialog modal-lg" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" data-i18n="qrcode.title">QR Code</h4>
+                        <h4 class="modal-title" data-i18n="qrcode.title">Route as QR Code</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
