Add message if no elevation data is available

--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,11 @@
             </div>
         </div>
 
-        <div class="collapse" id="elevation-chart"></div>
+        <div class="collapse" id="elevation-chart">
+            <span id="no-elevation-data" data-i18n="footer.no-elevation-data" style="display: none"
+                >No elevation data available for this route.</span
+            >
+        </div>
 
         <footer class="flexrow">
             <div id="stats-info" class="flexgrow">
