Use plural form when multiple overlays are active

--- a/index.html
+++ b/index.html
@@ -850,13 +850,9 @@
                                 ><span data-i18n="sidebar.layers.title">Layers</span>
                             </h1>
                             <div id="layers-control-wrapper"></div>
-                            <div class="leaflet-control-layers-separator"></div>
-                            <div>
-                                <label
-                                    id="leaflet-control-layers-overlays-opacity-slider"
-                                    data-i18n="sidebar.layers.overlay-opacity"
-                                    >Overlay transparency</label
-                                >
+                            <div id="leaflet-control-layers-overlays-opacity-slider">
+                                <div class="leaflet-control-layers-separator"></div>
+                                <label data-i18n="sidebar.layers.overlay-opacity">Overlay transparency</label>
                             </div>
                             <div class="leaflet-control-layers-separator"></div>
                             <div id="layers-button-group">
