Hide expand icon on moblie (#296)

--- a/index.html
+++ b/index.html
@@ -846,7 +846,8 @@
                         <div class="leaflet-sidebar-pane" id="tab_layers_control">
                             <h1 class="leaflet-sidebar-header">
                                 <span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span
-                                ><span class="leaflet-sidebar-expand"><i class="fa fa-expand"></i></span
+                                ><span class="d-none d-md-block leaflet-sidebar-expand"
+                                    ><i class="fa fa-expand"></i></span
                                 ><span data-i18n="sidebar.layers.title">Layers</span>
                             </h1>
                             <div id="layers-control-wrapper"></div>
@@ -910,7 +911,8 @@
                         <div class="leaflet-sidebar-pane" id="tab_profile">
                             <h1 class="leaflet-sidebar-header">
                                 <span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span
-                                ><span class="leaflet-sidebar-expand"><i class="fa fa-expand"></i></span
+                                ><span class="d-none d-md-block leaflet-sidebar-expand"
+                                    ><i class="fa fa-expand"></i></span
                                 ><span data-i18n="sidebar.customize-profile.title">Customize profile</span>
                             </h1>
                             <form class="flexcolumn flexgrow">
@@ -998,7 +1000,9 @@
                         <div class="leaflet-sidebar-pane" id="tab_data">
                             <h1 class="leaflet-sidebar-header">
                                 <span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span>
-                                <span class="leaflet-sidebar-expand"><i class="fa fa-expand"></i></span>
+                                <span class="d-none d-md-block leaflet-sidebar-expand"
+                                    ><i class="fa fa-expand"></i
+                                ></span>
                                 <span
                                     id="data-sync-map"
                                     class="sync-map active"
@@ -1015,7 +1019,9 @@
                             <h1 class="leaflet-sidebar-header">
                                 <span data-i18n="sidebar.itinerary.title">Itinerary</span
                                 ><span class="leaflet-sidebar-close"><i class="fa fa-caret-right"></i></span
-                                ><span class="leaflet-sidebar-expand"><i class="fa fa-expand"></i></span>
+                                ><span class="d-none d-md-block leaflet-sidebar-expand"
+                                    ><i class="fa fa-expand"></i
+                                ></span>
                             </h1>
                             <div id="itinerary" class="flexcolumn flexgrow"></div>
                         </div>
