Make modals fullscreen on mobile

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             aria-labelledby="Credits window"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="credits.title">Credits</h4>
@@ -194,7 +194,7 @@
             aria-labelledby="Layers window"
             aria-hidden="true"
         >
-            <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-dialog modal-lg modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="layers.customize">Customize layers</h4>
@@ -261,7 +261,7 @@
             aria-labelledby="About window"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="about.title">About</h4>
@@ -368,7 +368,7 @@
             aria-labelledby="What's new window"
             aria-hidden="true"
         >
-            <div class="modal-dialog modal-lg" role="document">
+            <div class="modal-dialog modal-lg modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="whatsnew.title">What's new?</h4>
@@ -397,7 +397,7 @@
             aria-labelledby="Load nogos window"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="loadNogos.title">Load no-go areas</h4>
@@ -474,7 +474,7 @@
             aria-labelledby="Export route window"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="export.title">Export route</h4>
@@ -598,7 +598,7 @@
             aria-labelledby="Load Track as route"
             aria-hidden="true"
         >
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-fullscreen-md-down" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="modal-title" data-i18n="trackasroute.title">Load Track as Route</h4>
