--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     class="dropdown-item"
                                     data-i18n="trackasroute.title"
                                     data-toggle="modal"
-                                    data-target="#loadedittrackdlg"
+                                    data-target="#loadedittrack"
                                     href="#"
                                     id="navbarLoadEditTracks"
                                     >Track as Route</a
@@ -592,7 +592,7 @@
         <!-- Track to Route modal window -->
         <div
             class="modal fade"
-            id="loadedittrackdlg"
+            id="loadedittrack"
             tabindex="-1"
             role="dialog"
             aria-labelledby="Load Track as route"
