Concatenate total track
+ handle server voicehint time removed, times with 3 digits

--- a/index.html
+++ b/index.html
@@ -1149,6 +1149,8 @@
             );
         </script>
 
+        <script src="https://unpkg.com/googlediff@0.1.0/javascript/diff_match_patch.js"></script>
+
         <script src="dist/core-js-bundle.min.js"></script>
         <script src="dist/regenerator-runtime.js"></script>
         <!-- <script src="dist/url-search-params.js"></script> -->
