Format name and creator

--- a/index.html
+++ b/index.html
@@ -1143,6 +1143,7 @@
         <script>
             // global package prefix for BRouter web application
             BR = {};
+            BR.version = '0.15.1';
 
             console.log(
                 '\r\n###\r\n###  BRouter-Web\r\n###\r\n###  Please note that the routing API used here is not public!\r\n###\r\n'
