Remove whatsnew icon when modal is displayed or dismissed

--- a/index.html
+++ b/index.html
@@ -910,6 +910,7 @@
                 <div id="map" class="leaflet-sidebar-map">
                     <div id="notification_jar">
                         <div id="message"></div>
+                        <div id="whats_new_message"></div>
                         <div id="overpass_loading_indicator"></div>
                     </div>
                     <div id="preview" hidden data-i18n="map.preview">Preview</div>
