Add credit for POIs, link to configured instance

--- a/index.html
+++ b/index.html
@@ -171,7 +171,11 @@
                             <dd data-i18n="[html]credits.boundaries">
                                 Administrative Boundaries:
                                 <a href="https://osm-boundaries.com" target="_blank">OSM-Boundaries</a>,
-                                <a href="https://overpass-api.de/" target="_blank">Overpass API</a>
+                                <a href="https://overpass-api.de/" class="overpass-url" target="_blank">Overpass API</a>
+                            </dd>
+                            <dd data-i18n="[html]credits.pois">
+                                Locations (POIs):
+                                <a href="https://overpass-api.de/" class="overpass-url" target="_blank">Overpass API</a>
                             </dd>
                             <dt data-i18n="credits.elevation-data">Elevation data</dt>
                             <dd>
