--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             aria-haspopup="true"
                             aria-expanded="false"
                             data-i18n="[title]keyboard.generic-shortcut"
-                            data-i18n-options="{ 'action': '$t(navbar.export-tooltip)', 'key': 'X' }"
+                            data-i18n-options='{ "action": "$t(navbar.export-tooltip)", "key": "X" }'
                             title="Export route"
                         >
                             <span class="fa fa-lg fa-cloud-download" aria-hidden="true"> </span>
@@ -78,12 +78,12 @@
                             aria-haspopup="true"
                             aria-expanded="false"
                             data-i18n="[title]navbar.load.tooltip"
-                            data-i18n-options="{
-                                'tracksAction': '$t(navbar.load.tracks)',
-                                'tracksKey': 'O',
-                                'nogosAction': '$t(navbar.load.nogos)',
-                                'nogosKey': '$t(keyboard.shift)+O'
-                            }"
+                            data-i18n-options='{
+                                "tracksAction": "$t(navbar.load.tracks)",
+                                "tracksKey": "O",
+                                "nogosAction": "$t(navbar.load.nogos)",
+                                "nogosKey": "$t(keyboard.shift)+O"
+                            }'
                             title="Load route"
                         >
                             <span class="fa fa-lg fa-cloud-upload" aria-hidden="true"> </span>
@@ -119,7 +119,7 @@
                     <div
                         class="nav-item"
                         data-i18n="[title]keyboard.generic-shortcut"
-                        data-i18n-options="{ 'action': '$t(about.tooltip)', 'key': 'H' }"
+                        data-i18n-options='{ "action": "$t(about.tooltip)", "key": "H" }'
                         title="Show more information about BRouter-Web"
                     >
                         <a class="nav-link" href="#" data-toggle="modal" data-target="#about"
@@ -822,11 +822,11 @@
                             href="#tab_layers_control"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
-                            data-i18n-options="{
-                                'action': '$t(sidebar.layers.tooltip)',
-                                'toggleKey': 'T',
-                                'switchKey': '$t(keyboard.shift)+T'
-                            }"
+                            data-i18n-options='{
+                                "action": "$t(sidebar.layers.tooltip)",
+                                "toggleKey": "T",
+                                "switchKey": "$t(keyboard.shift)+T"
+                            }'
                             title="Select layers"
                         >
                             <!--
@@ -856,11 +856,11 @@
                             href="#tab_itinerary"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
-                            data-i18n-options="{
-                                'action': '$t(sidebar.itinerary.tooltip)',
-                                'toggleKey': 'T',
-                                'switchKey': '$t(keyboard.shift)+T'
-                            }"
+                            data-i18n-options='{
+                                "action": "$t(sidebar.itinerary.tooltip)",
+                                "toggleKey": "T",
+                                "switchKey": "$t(keyboard.shift)+T"
+                            }'
                             title="Show Itinerary"
                             ><i class="fa fa-map-signs"></i
                         ></a>
@@ -870,11 +870,11 @@
                             href="#tab_profile"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
-                            data-i18n-options="{
-                                'action': '$t(sidebar.customize-profile.tooltip)',
-                                'toggleKey': 'T',
-                                'switchKey': '$t(keyboard.shift)+T'
-                            }"
+                            data-i18n-options='{
+                                "action": "$t(sidebar.customize-profile.tooltip)",
+                                "toggleKey": "T",
+                                "switchKey": "$t(keyboard.shift)+T"
+                            }'
                             title="Customize profile"
                             ><i class="fa fa-wrench"></i
                         ></a>
@@ -884,11 +884,11 @@
                             href="#tab_data"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
-                            data-i18n-options="{
-                                'action': '$t(sidebar.data.tooltip)',
-                                'toggleKey': 'T',
-                                'switchKey': '$t(keyboard.shift)+T'
-                            }"
+                            data-i18n-options='{
+                                "action": "$t(sidebar.data.tooltip)",
+                                "toggleKey": "T",
+                                "switchKey": "$t(keyboard.shift)+T"
+                            }'
                             title="Show detailed route data table"
                             ><i class="fa fa-table"></i
                         ></a>
@@ -898,11 +898,11 @@
                             href="#tab_analysis"
                             role="tab"
                             data-i18n="[title]sidebar.tab-tooltip"
-                            data-i18n-options="{
-                                'action': '$t(sidebar.analysis.tooltip)',
-                                'toggleKey': 'T',
-                                'switchKey': '$t(keyboard.shift)+T'
-                            }"
+                            data-i18n-options='{
+                                "action": "$t(sidebar.analysis.tooltip)",
+                                "toggleKey": "T",
+                                "switchKey": "$t(keyboard.shift)+T"
+                            }'
                             title="Analyse route"
                             ><i class="fa fa-pie-chart"></i
                         ></a>
@@ -1218,7 +1218,7 @@
                 aria-expanded="false"
                 aria-label="Toggle elevation chart"
                 data-i18n="[title]keyboard.generic-shortcut"
-                data-i18n-options="{ 'action': '$t(footer.elevation-chart)', 'key': 'E' }"
+                data-i18n-options='{ "action": "$t(footer.elevation-chart)", "key": "E" }'
                 title="Toggle elevation chart"
             >
                 <span class="fa fa-area-chart"></span>
