change keyboard shortcuts; update tooltips
- "Load Track as Route" is now triggered by pressing `Shift-O`
- "Load No-Go-Areas" is now triggered by pressing `Shift-N`
- tooltip for navbar link is updated an ready for translation

--- a/index.html
+++ b/index.html
@@ -78,12 +78,14 @@
                             aria-haspopup="true"
                             aria-expanded="false"
                             data-i18n="[title]navbar.load.tooltip"
-                            data-i18n-options="{
-                                'tracksAction': '$t(navbar.load.tracks)',
-                                'tracksKey': 'O',
-                                'nogosAction': '$t(navbar.load.nogos)',
-                                'nogosKey': '$t(keyboard.shift)+O'
-                            }"
+                            data-i18n-options='{
+                                "tracksAction": "$t(navbar.load.tracks)",
+                                "tracksKey": "O",
+                                "trackAsRouteAction": "$t(trackasroute.title)",
+                                "trackAsRouteKey": "$t(keyboard.shift)+O",
+                                "nogosAction": "$t(navbar.load.nogos)",
+                                "nogosKey": "$t(keyboard.shift)+N"
+                            }'
                             title="Load route"
                         >
                             <span class="fa fa-lg fa-cloud-upload" aria-hidden="true"> </span>
