Fix loading no-go areas
5b52abc1 broke importing no-go areas, in particular after choosing a file
and clicking on "Load" nothing would happen.

This is due to renaming the `<input>`'s `<id>` which is still referenced
in `NogoAreas.js` by its old name.

Undoing the rename resolves the issue.

Test Plan:
- Open "Load no-go areas" dialog.
- Click on "Browse" and select GeoJSON file (e.g. as referenced in #161).
- Click on "Load".
- The no-go areas should be added to the map.

--- a/index.html
+++ b/index.html
@@ -727,10 +727,7 @@
                                     </div>
                                     <p data-i18n="modal.or">or</p>
                                     <div class="form-group row">
-                                        <label
-                                            class="col-form-label col-sm-3"
-                                            for="loadNogosFile"
-                                            data-i18n="loadNogos.file"
+                                        <label class="col-form-label col-sm-3" for="nogoFile" data-i18n="loadNogos.file"
                                             >File (.geojson)</label
                                         >
                                         <div class="col-sm-9">
@@ -738,12 +735,12 @@
                                                 <input
                                                     type="file"
                                                     accept=".geojson"
-                                                    name="loadNogosFile"
-                                                    id="loadNogosFile"
+                                                    name="nogoFile"
+                                                    id="nogoFile"
                                                     class="custom-file-input"
                                                 />
                                                 <label
-                                                    for="loadNogosFile"
+                                                    for="nogoFile"
                                                     class="custom-file-label"
                                                     data-i18n="[data-browse]trackasroute.browse"
                                                     style="
