Added new export as FIT file format fixes #322
Actual FIT encoding logic created as a new repo "fit-file-writer"

--- a/index.html
+++ b/index.html
@@ -488,6 +488,18 @@
                                                 <span data-i18n="export.format_csv">CSV</span>
                                             </label>
                                         </div>
+                                        <div class="form-check">
+                                            <label class="form-check-label" for="format-fit">
+                                                <input
+                                                    class="form-check-input"
+                                                    id="format-fit"
+                                                    type="radio"
+                                                    name="format"
+                                                    value="fit"
+                                                />
+                                                <span data-i18n="export.format_fit">FIT</span>
+                                            </label>
+                                        </div>
                                     </div>
                                 </div>
                             </fieldset>
