New info icons for export
* if format will include turns
* warning fit with server download

--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                                                     checked
                                                 />
                                                 <span data-i18n="export.format_gpx">GPX</span>
+                                                <i class="fa fa-location-arrow format-turns-enabled" hidden></i>
                                             </label>
                                         </div>
                                         <div class="form-check">
@@ -498,6 +499,7 @@
                                                     value="fit"
                                                 />
                                                 <span data-i18n="export.format_fit">FIT</span>
+                                                <i class="fa fa-location-arrow format-turns-enabled" hidden></i>
                                             </label>
                                         </div>
                                     </div>
@@ -532,7 +534,7 @@
                                 <i class="fa fa-cloud-download"></i>
                                 <i
                                     hidden
-                                    id="export-beeline-warning"
+                                    id="export-download-warning"
                                     class="fa fa-exclamation-triangle"
                                     style="font-size: 10px; position: absolute; margin-top: -3px; margin-left: -1px"
                                 ></i>
