Replace IRC link with Matrix
as nobody answers on IRC and Matrix bridge forwards to closed room.

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                                 >
                             </li>
                             <li>
-                                <a href="https://webchat.oftc.net/?channels=#brouter" target="_blank"
+                                <a href="https://app.element.io/#/room/#_oftc_#brouter:matrix.org" target="_blank"
                                     ><span data-i18n="about.chat">Chat with users and developers</span></a
                                 >
                             </li>
