simplify hiding QR Code size buttons

--- a/index.html
+++ b/index.html
@@ -664,14 +664,9 @@
                             the route definition is too long. Removing some waypoints may help fit all data into the QR
                             Code.
                         </p>
-                        <div id="qrcode-size-buttons">
+                        <div id="qrcode-buttons">
                             <div class="mt-2"><small>QR Code Size:</small></div>
-                            <div
-                                id="qrcode-buttons"
-                                class="btn-group btn-group-xs"
-                                role="group"
-                                aria-label="Change size of QR Code"
-                            >
+                            <div class="btn-group btn-group-xs" role="group" aria-label="Change size of QR Code">
                                 <button
                                     class="btn btn-secondary qrcode-size-button"
                                     id="qrcode-create-small"
